working insertion/deletion

--- a/lib/vector/Makefile
+++ b/lib/vector/Makefile
@@ -6,11 +6,11 @@
 #    By: tishj <tishj@student.codam.nl>               +#+                      #
 #                                                    +#+                       #
 #    Created: 2021/03/03 13:36:40 by tishj         #+#    #+#                  #
-#    Updated: 2021/03/05 21:47:53 by tishj         ########   odam.nl          #
+#    Updated: 2021/03/06 12:40:00 by tishj         ########   odam.nl          #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = vector
+NAME = libvector.a
 
 CC = gcc
 CFLAGS = -Wall -Wextra -Werror
@@ -22,20 +22,37 @@ INCL_DIR = ./incl
 HEADER	=	vector.h
 HEADER	:=	$(addprefix $(INCL_DIR)/, $(HEADER))
 
+ifeq ($(DEBUG),1)
+	CFLAGS += -g -fsanitize=address
+endif
+
 SRC 	=	vec_add.c \
 			vec_destroy.c \
 			vec_getref.c \
 			vec_new.c \
 			vec_del.c
+
 OBJ 	:=	$(SRC:%.c=$(OBJ_DIR)/%.o)
 SRC		=	$(SRC:%.c=$(SRC_DIR)/%.c)
 INCL	:=	$(addprefix -I ,$(INCL_DIR))
 
 $(OBJ_DIR)/%.o : $(SRC_DIR)/%.c
 	@mkdir -p $(@D)
-	$(CC) $(CFLAGS) $(INCL) -c $< -o $@
+	@echo "Compiling $@"
+	@$(CC) $(CFLAGS) $(INCL) -c $< -o $@
 
-all : libvector.a
+all : $(NAME)
 
-libvector.a : $(OBJ)
-	ar -rcs $@ $^
+$(NAME) : $(OBJ)
+	@echo "Compiling $@"
+	@ar -rcs $@ $^
+
+clean:
+	@echo "Cleaning vector.."
+	@rm -f $(OBJ)
+
+fclean: clean
+	@echo "Full cleaning vector.."
+	@rm -f $(NAME)
+
+re: fclean all
