hooks functional no :D

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"ncurses.h": "c",
 		"reigns.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"reigns_int.h": "c"
 	}
 }
