--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"reins_int.h": "c",
 		"unistd.h": "c",
-		"reins.h": "c"
+		"reins.h": "c",
+		"functional": "c"
 	}
 }
